mi-fix z-index issue

--- a/theme/_aside.scss
+++ b/theme/_aside.scss
@@ -8,6 +8,10 @@ aside {
         display: flex;
     }
 
+    &.is-close {
+        width: 775px;
+    }
+
     width: 990px;
     left: -490px;
 
